--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <!-- Hero Section moved to top-level so it can span full width -->
   <section class="intro">
-    <h1>Discover</h1>
+    <h1>Disc<span class="accent-o">o</span>ver</h1>
     <p>A LIBRARY FOR CURIOSITY</p>
   </section>
 
@@ -21,7 +21,7 @@
       <div class="layout">
         <aside aria-label="Table of contents">
           <div class="toc" id="toc">
-            <h3>Contents</h3>
+            <h3>Explore</h3>
             <div id="toc-list" class="toc-list"></div>
           </div>
         </aside>
