--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="modal-backdrop" data-dismiss="modal"></div>
     <div class="modal-content" role="document">
       <h2 id="guidanceTitle">A Word Before You Read</h2>
-      <p id="guidanceText">May the Lord grant you discernment and humility as you read. Pray for understanding and seek truth with love. — Amen.</p>
+      <p id="guidanceText">May the Lord grant you discernment and humility as you read. Pray for understanding and seek truth with love.</p>
       <div class="modal-actions">
         <button id="acceptGuidance" class="btn">Amen!</button>
       </div>
